# django_demo

./: .gitignore  README.md  pyproject.toml
django_demo/: settings.py
